--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 body {
   background: white;
   margin: 0;
+  font-family: "Balsamiq Sans", cursive;
 }
 
 body p,
@@ -54,20 +55,86 @@ body h1 {
 .header .navbar p {
   padding-left: 15px;
   font-size: 20px;
-  cursor: pointer;
-  color: white;
 }
 
 .header .link {
   text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
 
 .about,
 .projects,
 .home {
-  margin-top: 65px;
+  margin-top: 60px;
   padding: 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home {
+  height: 90vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.home h1,
+.home h2,
+.home p {
+  margin: 30px;
+}
+
+.about {
+  width: 100%;
+  padding: 0;
+  background: #d9d9d9;
+}
+
+.about h2 {
+  margin-top: 80px;
+}
+
+.about .aboutText {
+  padding: 10px;
+}
+
+.about #ruth {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
+.about .pics img {
+  width: 100px;
+  padding: 20px;
+}
+
+.about .certs img {
+  width: 250px;
+  padding: 20px;
+}
+
+.about p {
+  margin: 20px;
+  text-align: justify;
+  font-size: 20px;
+}
+
+.about #codepen {
+  padding: 0 10px;
+}
+
+.about #github {
+  padding-left: 10px;
 }
 /*# sourceMappingURL=styles.css.map */
