--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Balsamiq+Sans&display=swap");
 body {
   background: white;
   margin: 0;
@@ -65,7 +66,8 @@ body h1 {
 
 .about,
 .projects,
-.home {
+.home,
+.contact {
   margin-top: 60px;
   padding: 10px;
   -webkit-box-sizing: border-box;
@@ -136,5 +138,130 @@ body h1 {
 
 .about #github {
   padding-left: 10px;
+}
+
+.projects {
+  background: #cccccc;
+  padding-bottom: 40px;
+  width: 100%;
+}
+
+.projects h2 {
+  margin: 80px 0 30px 0;
+}
+
+.projects .projects-container {
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  -webkit-column-gap: 40px;
+          column-gap: 40px;
+  row-gap: 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.projects .project-tile {
+  justify-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid #999999;
+  background: #999999;
+  cursor: pointer;
+}
+
+.projects .project-tile img {
+  width: 100%;
+}
+
+.projects .project-tile a,
+.projects .project-tile p {
+  margin: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal .modal-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  background: white;
+  width: 74%;
+  height: auto;
+  top: 5%;
+  left: 13%;
+  border: 2px solid white;
+}
+
+.modal .modal-main img {
+  border: 1px solid #999999;
+}
+
+.modal .modal-main img,
+.modal .modal-main p {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.modal .modal-main button {
+  margin-bottom: 10px;
+}
+
+.modal .modal-main a {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.contact .contactInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact h2 {
+  margin: 80px 0 30px 0;
+}
+
+.contact #emaillogo {
+  width: 32px;
+  margin-left: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
