--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Balsamiq+Sans&display=swap");
+
 $main-color: white;
 $secondary-color: black;
+$project-color: #999999;
 
 @mixin flex-row() {
   display: flex;
@@ -60,7 +63,8 @@ body {
 
 .about,
 .projects,
-.home {
+.home,
+.contact {
   @include background();
   @include flex-column();
 }
@@ -107,5 +111,87 @@ body {
   }
   #github {
     padding-left: 10px;
+  }
+}
+.projects {
+  background: #cccccc;
+  padding-bottom: 40px;
+  width: 100%;
+  h2 {
+    margin: 80px 0 30px 0;
+  }
+  .projects-container {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    column-gap: 40px;
+    row-gap: 40px;
+    box-sizing: border-box;
+  }
+  .project-tile {
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid $project-color;
+    // box-shadow: 3px 3px 8px 4px #4d4d4d;
+    background: $project-color;
+    cursor: pointer;
+    img {
+      width: 100%;
+    }
+    a,
+    p {
+      margin: 10px;
+      text-decoration: none;
+      color: black;
+    }
+  }
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  .modal-main {
+    @include flex-column();
+    position: fixed;
+    background: white;
+    width: 74%;
+    height: auto;
+    top: 5%;
+    left: 13%;
+    border: 2px solid white;
+    img {
+      border: 1px solid #999999;
+    }
+    img,
+    p {
+      margin-bottom: 10px;
+      width: 100%;
+    }
+    button {
+      margin-bottom: 10px;
+    }
+    a {
+      align-self: flex-start;
+    }
+  }
+}
+
+.contact {
+  .contactInfo {
+    @include flex-row();
+  }
+  h2 {
+    margin: 80px 0 30px 0;
+  }
+  #emaillogo {
+    width: 32px;
+    margin-left: 20px;
   }
 }
