--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -141,7 +141,7 @@ body h1 {
 }
 
 .projects {
-  background: #cccccc;
+  background: #d9d9d9;
   padding-bottom: 40px;
   width: 100%;
 }
@@ -243,7 +243,48 @@ body h1 {
       align-self: flex-start;
 }
 
-.contact .contactInfo {
+.contact {
+  height: 100vh;
+  background: #d9d9d9;
+}
+
+.contact h2 {
+  margin: 80px 0 30px 0;
+}
+
+.contact #emaillogo {
+  width: 32px;
+  margin-left: 20px;
+}
+
+.contact .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.contact .links h3 {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.contact .links p {
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.contact .link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -254,14 +295,13 @@ body h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-decoration: none;
+  color: black;
+  margin: 0 0 10px 30px;
 }
 
-.contact h2 {
-  margin: 80px 0 30px 0;
-}
-
-.contact #emaillogo {
-  width: 32px;
-  margin-left: 20px;
+.contact .icon {
+  width: 30px;
+  font-size: 30px;
 }
 /*# sourceMappingURL=styles.css.map */
