new project page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -64,10 +64,16 @@ body h1 {
   cursor: pointer;
 }
 
+.header .link p:hover,
+.header .link h1:hover {
+  color: gray;
+}
+
 .about,
 .projects,
 .home,
-.contact {
+.contact,
+.project {
   margin-top: 60px;
   padding: 10px;
   -webkit-box-sizing: border-box;
@@ -140,17 +146,20 @@ body h1 {
   padding-left: 10px;
 }
 
-.projects {
+.projects,
+.projects2 {
   background: #d9d9d9;
   padding-bottom: 40px;
   width: 100%;
 }
 
-.projects h2 {
+.projects h2,
+.projects2 h2 {
   margin: 80px 0 30px 0;
 }
 
-.projects .projects-container {
+.projects .projects-container,
+.projects2 .projects-container {
   width: 90%;
   display: -ms-grid;
   display: grid;
@@ -165,7 +174,13 @@ body h1 {
           box-sizing: border-box;
 }
 
-.projects .project-tile {
+.projects .proj-link,
+.projects2 .proj-link {
+  text-decoration: none;
+}
+
+.projects .project-tile,
+.projects2 .project-tile {
   justify-self: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -184,15 +199,56 @@ body h1 {
   cursor: pointer;
 }
 
-.projects .project-tile img {
+.projects .project-tile img,
+.projects2 .project-tile img {
+  background-color: ivory;
   width: 100%;
 }
 
-.projects .project-tile a,
-.projects .project-tile p {
+.projects .project-tile p,
+.projects2 .project-tile p {
   margin: 10px;
+  color: black;
+}
+
+.project h2 {
+  margin: 30px 0 30px 0;
+}
+
+.project img {
+  width: 70%;
+}
+
+.project p {
+  margin: 30px;
+  text-align: justify;
+}
+
+.project .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 95%;
+}
+
+.project .footer a {
   text-decoration: none;
   color: black;
+}
+
+.project .footer .icon {
+  width: 25px;
+  font-size: 25px;
 }
 
 .modal {
