--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,6 @@ $background-color: #d9d9d9;
   padding: 10px;
   box-sizing: border-box;
 }
-
 body {
   background: $main-color;
   margin: 0;
@@ -55,6 +54,14 @@ body {
       font-size: 20px;
     }
   }
+  @media (max-width: 650px) {
+    .navbar {
+      @include flex-column();
+    }
+    p {
+      font-size: 15px;
+    }
+  }
   .link {
     text-decoration: none;
     color: white;
@@ -73,7 +80,12 @@ body {
 .project {
   @include background();
   @include flex-column();
+
+  @media (max-width: 650px) {
+    margin-top: 80px;
+  }
 }
+
 .home {
   height: 90vh;
   justify-content: center;
@@ -102,6 +114,14 @@ body {
   .pics img {
     width: 100px;
     padding: 20px;
+  }
+  .certs {
+    @include flex-row();
+  }
+  @media (max-width: 650px) {
+    .certs {
+      @include flex-column();
+    }
   }
   .certs img {
     width: 250px;
@@ -205,19 +225,30 @@ body {
     top: 5%;
     left: 13%;
     border: 2px solid white;
+    padding: 10px;
     img {
       border: 1px solid #999999;
+      width: 80%;
     }
-    img,
     p {
-      margin-bottom: 10px;
+      margin: 20px 0;
       width: 100%;
+      text-align: justify;
+    }
+    @media (max-width: 650px) {
+      p {
+        font-size: 10px;
+      }
+    }
+    h2 {
+      margin: 0 0 10px 0;
     }
     button {
       margin-bottom: 10px;
     }
-    a {
+    .gitLink {
       align-self: flex-start;
+      text-decoration: none;
     }
   }
 }
