--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@ $background-color: #d9d9d9;
   padding: 10px;
   box-sizing: border-box;
 }
+
 body {
   background: $main-color;
   margin: 0;
@@ -76,8 +77,7 @@ body {
 .about,
 .projects,
 .home,
-.contact,
-.project {
+.contact {
   @include background();
   @include flex-column();
 
@@ -94,6 +94,7 @@ body {
   h2,
   p {
     margin: 30px;
+    text-align: center;
   }
 }
 .about {
@@ -139,8 +140,7 @@ body {
     padding-left: 10px;
   }
 }
-.projects,
-.projects2 {
+.projects {
   background: $background-color;
   padding-bottom: 40px;
   width: 100%;
@@ -182,33 +182,6 @@ body {
   }
 }
 
-.project {
-  h2 {
-    margin: 30px 0 30px 0;
-  }
-  img {
-    width: 70%;
-  }
-  p {
-    margin: 30px;
-    text-align: justify;
-  }
-  .footer {
-    @include flex-row();
-    justify-content: space-between;
-    width: 95%;
-
-    a {
-      text-decoration: none;
-      color: black;
-    }
-    .icon {
-      width: 25px;
-      font-size: 25px;
-    }
-  }
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -237,7 +210,7 @@ body {
     }
     @media (max-width: 650px) {
       p {
-        font-size: 10px;
+        font-size: 12px;
       }
     }
     h2 {
