--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,8 @@ body h1 {
   background: black;
   color: white;
   padding: 10px;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   width: 100%;
   left: 0;
@@ -126,7 +127,7 @@ body h1 {
 .home h1,
 .home h2,
 .home p {
-  margin: 30px;
+  margin: 30px 50px;
   text-align: center;
 }
 
